[package]
name = "rs_taskflow"
version = "0.1.0"
authors = ["Miaofei <ameision@hotmail.com>"]
edition = "2018"

[dependencies]
rs_taskflow_derive = { path = "../rs_taskflow_derive" }
tokio = { version = "1.7.1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
num = "0.4.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[[test]]
name = "proc_macro_test"
path = "tests/proc_macro_test.rs"

[[test]]
name = "flow_test"
path = "tests/flow_test.rs"
