[package]
name = "rs_taskflow"
version = "0.1.0"
authors = ["Miaofei <ameision@hotmail.com>"]
edition = "2021"

[dependencies]
rs_taskflow_derive = { path = "../rs_taskflow_derive" }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
dyn-clone = { version = "1.0.11" }

[dev-dependencies]
num = "0.4.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[features]
manual_task_ifaces = []

[[test]]
name = "proc_macro_test"
path = "tests/proc_macro_test.rs"

[[test]]
name = "proc_macro_attribute_test"
path = "tests/proc_macro_attribute_test.rs"

[[test]]
name = "flow_test"
path = "tests/flow_test.rs"

[[test]]
name = "multiflow_test"
path = "tests/multiflow_test.rs"

[[test]]
name = "full_example_test"
path = "tests/full_example_test.rs"
