[package]
name = "rs_taskflow_derive"
version = "0.1.0"
authors = ["Miaofei <ameision@hotmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A library for executing graphs of tasks"
repository = "https://github.com/mm318/rs_taskflow"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.54"
quote = "1.0.26"
syn = { version = "2.0.13", features = ["full"] }
